Information to detail.

--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -35,7 +35,19 @@ where
     }
 // ...
 ```
+- explain: `I2C: i2c::WriteRead<Error = E> + i2c::Write<Error = E>` ?
+#### Device slave address
 
+- slave addresses are available in the code:
+
+```rust
+AD0 = 0b110_1000, // or 0x68
+AD1 = 0b110_1001, // or 0x69
+```
+
+- This I2C device has two possible addresses - 0x68 and 0x69. 
+We tell the device which one we want it to use by applying either 0V or 3.3V to the AP_AD0 pin on the device. If we apply 0V, it listens to address 0x68. If we apply 3.3V it listens to address 0x69. You can therefore think of pin AD_AD0 as being a one-bit input which sets the least-significant bit of the device address.
+More information is available in the [datasheet, section 9.3](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf)
 ### Representation of Registers 
 
 The sensor's registers are represented as enums. Each variant has the register's address as value. The type `Register` implements a method that exposes the variant's address.
@@ -79,11 +91,23 @@ where
 }
 ```
 
-✅ Implement a public method that reads the `WHOAMI` register with the address `0x0F`. 
+✅ Implement a public method that reads the `WHOAMI` register with the address `0x0F`. Make use of the the above `read_register()` method.
+
+
 ✅ Optional: Implement further methods that add features to the driver. Check the [documentation](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) for the respective registers and their addresses. Some ideas:
     * switching the the gyroscope sensor or the accelerometer on
     * starting measurements
     * reading measurements
 
-TODO: Add general info about how registers work
+#### General info about how registers work
+
+- Registers are small amounts of storage, immediately accessible by the processor. The registors on the sensor are 8 bits.
+- They can be accessed by their address
+- You can find [registers maps](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) in the section 14.
+- Returning a value with MSB and LSB is done by shifting MSB values, and OR LSB values.
+```rust
+let GYRO_DATA_X: i16 = ((GYRO_DATA_X1 as i16) << 8) | GYRO_DATA_X0 as i16;
+```
+(maybe from `from_be_bytes[GYRO_data_X1, GYRO_DATA_X2] is better)
+- if you need hints and inspiration, you can check the imc42670p in the common/lib
 
