--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -1,6 +1,6 @@
 ## I2C Sensor Reading Exercise 
 
-In this excercise you will learn how to read out sensors on the i2c protocol. 
+In this exercise you will learn how to read out sensors on the i2c bus. 
  
  
 The board has two sensors that can be read via the I2C bus: `
@@ -18,14 +18,9 @@ The board has two sensors that can be read via the I2C bus: `
 
 Create an instance of the of the Humidity sensor SHTC3 and read and print the values for humidity and temperature every 600 ms.
 
-#### Expected Output:
 
-```
-TEMP: [local temperature] °C
-HUM: [local humidity] %
-```
 
-`i2c-sensor-reading/solution/src/main.rs` contains a working solution.
+`i2c-sensor-reading/solution/src/main.rs` contains a working solution of Part 1.
 
 `i2c-sensor-reading/exercise/src/main.rs` contains skeleton code, that already contains necessary imports for this part. 
 
@@ -37,27 +32,38 @@ HUM: [local humidity] %
 $ cargo doc --open
 ```
  
-✅ Define two pins, one as SDA and one as SCL. Use them to create an Instance of the I²C peripheral. 
+✅ Define two pins, one as SDA and one as SCL. 
 
 | Signal     | GPIO        |
 |------------|-------------|
 | SDA        | GPIO10      |
 | SCL        | GPIO8       |
 
-
+✅ Create an Instance of the I²C peripheral with the help of the documentation. 
 
 ✅ Use the `shtcx` driver crate, make an instance of the SHTC3 sensor passing the I²C instance into them. Check the documentation for guidance. 
 
+✅ To check if the sensor is addressed correctly, read it's device ID and print the value.
+
+#### Expected Output:
+```
+Device ID: 71
+```
+
 ✅ Make a measurement, and read the sensor values and print them. Check the documentation for guidance on sensor methods. 
 
-❗ Some sensors need some time to pass, between measurement and reading value. 
+#### Expected Output:
+
+```
+TEMP: [local temperature] °C
+HUM: [local humidity] %
+```
+
+❗ Some sensors need some time to pass between measurement and reading value. 
 ❗ Watch out for the expected units!
 
 
 
-`i2c-driver/exercise/src/main.rs` contains working code. Running it without modifying the driver file will yield errors. 
-
-`i2c-driver/solution/src/imc42670p.rs` provides a solution to the task. 
 
 
 ## Hints
@@ -66,13 +72,61 @@ $ cargo doc --open
 
 ### Part 2: Reading Accelerometer data. 
 
-Now, we want to read out the second sensor.
+Using a bus manager, implement the second sensor. Read out its values and print the values from both sensors. 
+
+
+Continue with your code from Part 1. Alternatively you can start with the provided partial solution of Part 1: `i2c-sensor-reading/solution/src/main.rs`.
+
+`i2c-sensor-reading/solution/src/main_2.rs` contains a working solution of Part 2. You can consult it if you need help. 
+
+
+#### Steps
+
+✅ Import the driver crate for the ICM42670p.  
+
+```rust
+use imc42670p;
+```
+
+✅ Create an instance of the sensor.  
 
 
 
- `i2c-driver/exercise/src/main.rs` contains working code skeleton. 
 
-`i2c-driver/exercise/src/main.rs` contains working code. Running it without modifying the driver file will yield errors. 
+✅ Why does passing the same i2c instance to two sensors not work, despite both being on the same i2c bus?
 
-`i2c-driver/solution/src/imc42670p.rs` provides a solution to the task. 
+<details>
+  <summary>Answer</summary>
+  
+This is an ownership issue. Every place in memory needs to be owned by something. If we pass the i2c bus to the SHTC3, the sensor owns the i2c bus. It can't be owned by another sensor. Borrowing is also not possible, because the i2c bus needs to be mutable. Both sensors need to be able to change it. We solve this problem by introducing a bus manager, that creates a number of proxies of the i2c bus. These proxies can than be owned by the respective sensors. 
+</details>
+
+✅ Import the bus manager crate. 
+
+```rust
+use shared_bus;
+```
+
+✅ Create an instance of a simple bus manager. Make two proxies and use them instead of the original i2c instance to pass to the sensors. 
+✅ Read & print the device ID from both sensors. 
+
+#### Expected Output:
+```
+Device ID SHTC3: 71
+Device ID ICM42670p: 96
+```
+
+
+✅ Start the ICM42670p in low noise mode. 
+
+
+✅ Read the gyroscope sensor values and print them with 2 decimal places alongside the temperature and humidity values. 
+
+#### Expected Output:
+
+```
+GYRO: X: 0.00 Y: 0.00 Z: 0:00
+TEMP: [local temperature] °C
+HUM: [local humidity] %
+```
 
