--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -1,44 +1,47 @@
-# I2C Driver Exercise
+# I2C Driver Exercise Solution
 
 We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: reading the device ID of the sensor. 
 
-TODO `i2c-driver/exercise/src/imc42670p.rs` is a gap text of a very basic I²C IMU sensor driver. The task is to complete the file, so that running `main.rs` will log the device ID of the driver. The this gap text driver is based on the version of the same name that lives in common, but provides a little bit more functionality.
+`i2c-driver/exercise/src/imc42670p.rs` is a gap text of a very basic I²C IMU sensor driver. The task is to complete the file, so that running `main.rs` will log the device ID of the driver. The this gap text driver is based on the version of the same name that lives in common, but provides a little bit more functionality.
 
 ## Driver API
 
 ### Instance of the Sensor
 
-To use a peripheral sensor first you must get an instance of the it. The sensor is represented as a struct that contains both its Device Address, and an object representing the I²C bus itself. This is done using traits defined in the `embedded-hal` crate. The struct is public as it needs to be accessible from outside this crate, but its fields are private. We also implement an instantiating method. Methods can also be public or private. This method needs to be accessible from outside, so it's labelled `pub`. Note that written this way, the sensor instance takes ownership of the I²C bus.
+To use a peripheral sensor first you must get an instance of the it. The sensor is represented as a struct that contains both its Device Address, and an object representing the I²C bus itself. This is done using traits defined in the `embedded-hal` crate. The struct is public as it needs to be accessible from outside this crate, but its fields are private. 
 
 ```rust 
 #[derive(Debug)]
-pub struct IMC42670P<I2C> {
+pub struct ICM42670P<I2C> {
     /// The concrete I²C device implementation.
     i2c: I2C,
 
     /// Device address
-    address: SlaveAddr,
+    address: DeviceAddr,
 }
 
 // ...
+```
+We also implement an instantiating method. Methods can also be public or private. This method needs to be accessible from outside, so it's labelled `pub`. Note that written this way, the sensor instance takes ownership of the I²C bus.
 
-impl<I2C, E>IMC42670P<I2C>
+```rust
+impl<I2C, E>ICM42670P<I2C>
 where
     I2C: i2c::WriteRead<Error = E> + i2c::Write<Error = E>,
 {
     /// Create a new instance of the IMC42670P.
-    pub fn new(i2c: I2C, address: SlaveAddr) -> Result<Self, E> {
+    pub fn new(i2c: I2C, address: DeviceAddr) -> Result<Self, E> {
 
-        let imc42670p = IMC42670P { i2c, address };
+        let icm42670p = ICM42670P { i2c, address };
 
-        Ok(imc42670p)
+        Ok(icm42670p)
     }
 // ...
 ```
 - explain: `I2C: i2c::WriteRead<Error = E> + i2c::Write<Error = E>` ?
-#### Device slave address
+#### Device address
 
-- slave addresses are available in the code:
+- the device's addresses are available in the code:
 
 ```rust
 AD0 = 0b110_1000, // or 0x68
