--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -1,6 +1,6 @@
-# I2C Driver Exercise Solution
+# I2C Driver Exercise - Easy Version 
 
-We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: reading the device ID of the sensor. 
+We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: reading the device ID of the sensor. This version is labelled easy, because we explain the code fragments, and you only have to copy and paste the fragments into into the right place. Use this version if you have very little previous experience with Rust, if these workshops are your first in the embedded domain, or if you found the hard version too hard. 
 
 `i2c-driver/exercise/src/imc42670p.rs` is a gap text of a very basic I²C IMU sensor driver. The task is to complete the file, so that running `main.rs` will log the device ID of the driver. The this gap text driver is based on the version of the same name that lives in common, but provides a little bit more functionality.
 
