--- a/book/src/04_3_3_i2c.md
+++ b/book/src/04_3_3_i2c.md
@@ -1,6 +1,6 @@
 # Writing an I2C Driver
 
-We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: Reading the device ID of the sensor. 
+We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: Reading the device ID of the sensor. This version is labelled hard, because you have to come up with the content of the methods and research information in the embedded-hal and data-sheets yourself. 
 
 `i2c-driver/exercise/src/imc42670p.rs` is a gap text of a very basic I²C IMU sensor driver. The task is to complete the file, so that running `main.rs` will log the device ID of the driver. The this gap text driver is based on the version of the same name that lives in common, but provides a little bit more functionality.
 
@@ -113,8 +113,18 @@ impl Register {
 
 ### read_register() and write_register()
 
-We define a read and a write method, based on methods provided by the `embedded-hal` crate. They serve as helpers for more specific methods and as an abstraction that is adapted to a sensor with 8-bit registers. Note how the `read_register()` method is based on a `write_read()` method. The reason for this lies in the characteristics of the I²C protocol: We first need to write a command over the I²C bus to specify which register we want to read from. Helper methods can remain private as they don't need to be accessible from outside this crate. 
+✅ Check out the write and write_read function in the embedded-hal. Why is it `write_read` and not just `read`?
 
+<Details>
+    <Summary>Answer</Summary>
+The reason for this lies in the characteristics of the I²C protocol: We first need to write a command over the I²C bus to specify which register we want to read from. 
+</Details>
+
+
+✅ Define a `read_register` and a `write_register` method for the sensor instance. Use methods provided by the `embedded-hal` crate. They serve as helpers for more specific methods and as an abstraction that is adapted to a sensor with 8-bit registers. This means that the data that is written, as well as the data that is read is an unsigned 8-bit integer. Helper methods can remain private as they don't need to be accessible from outside this crate. 
+
+<Details>
+    <Summary>Example Solution</Summary>
 ```rust
 impl<I2C, E>IMC42670P<I2C>
 where
@@ -135,8 +145,26 @@ where
     }
 }
 ```
+</Details>
+
 
 ✅ Implement a public method that reads the `WHOAMI` register with the address `0x0F`. Make use of the the above `read_register()` method.
+
+<Details>
+    <Summary>Example Solution</Summary>
+```rust
+impl<I2C, E>IMC42670P<I2C>
+where
+    I2C: i2c::WriteRead<Error = E> + i2c::Write<Error = E>,
+{    
+    //...
+pub fn read_device_id_register(&mut self) -> Result<u16, E> {
+        self.read_register(Register::WhoAmI)
+    }
+
+}
+```
+</Details>
 
 
 ✅ Optional: Implement further methods that add features to the driver. Check the [documentation](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) for the respective registers and their addresses. Some ideas:
@@ -146,9 +174,9 @@ where
 
 #### General info about how registers work
 
-- Registers are small amounts of storage, immediately accessible by the processor. The registors on the sensor are 8 bits.
+- Registers are small amounts of storage, immediately accessible by the processor. The registers on the sensor are 8 bits.
 - They can be accessed by their address
-- You can find [registers maps](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) in the section 14.
+- You can find [register maps](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) in the section 14.
 - Returning a value with MSB and LSB is done by shifting MSB values, and OR LSB values.
 ```rust
 let GYRO_DATA_X: i16 = ((GYRO_DATA_X1 as i16) << 8) | GYRO_DATA_X0 as i16;
