--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -1,4 +1,4 @@
-# I2C Driver Exercise - Easy Version 
+# I²C Driver Exercise - Easy Version 
 
 We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: reading the device ID of the sensor. This version is labelled easy, because we explain the code fragments, and you only have to copy and paste the fragments into into the right place. Use this version if you have very little previous experience with Rust, if these workshops are your first in the embedded domain, or if you found the hard version too hard. 
 
@@ -48,9 +48,9 @@ AD0 = 0b110_1000, // or 0x68
 AD1 = 0b110_1001, // or 0x69
 ```
 
-- This I2C device has two possible addresses - 0x68 and 0x69. 
+- This I²C device has two possible addresses - 0x68 and 0x69. 
 We tell the device which one we want it to use by applying either 0V or 3.3V to the AP_AD0 pin on the device. If we apply 0V, it listens to address 0x68. If we apply 3.3V it listens to address 0x69. You can therefore think of pin AD_AD0 as being a one-bit input which sets the least-significant bit of the device address.
-More information is available in the [datasheet, section 9.3](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf)
+More information is available in the [data sheet, section 9.3](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf)
 ### Representation of Registers 
 
 The sensor's registers are represented as enums. Each variant has the register's address as value. The type `Register` implements a method that exposes the variant's address.
