--- a/book/src/04_3_3_i2c.md
+++ b/book/src/04_3_3_i2c.md
@@ -1,4 +1,4 @@
-# Writing an I2C Driver
+# Writing an I²C Driver
 
 We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: Reading the device ID of the sensor. This version is labelled hard, because you have to come up with the content of the methods and research information in the embedded-hal and data-sheets yourself. 
 
@@ -27,7 +27,7 @@ pub struct ICM42670P<I2C> {
 </Details>
 
 
- ✅ Implement an instantiating method in the `impl` block. This method needs to be accessible from outside, so it's labelled `pub`. The method takes ownership of the i2c bus and creates an instance of the struct you defined earlier.
+ ✅ Implement an instantiating method in the `impl` block. This method needs to be accessible from outside, so it's labelled `pub`. The method takes ownership of the I²C bus and creates an instance of the struct you defined earlier.
 
 <Details>
     <Summary>Example Solution</Summary>
@@ -52,7 +52,7 @@ where
 
 #### Device address
 
- ✅ This I2C device has two possible addresses, find them in the data sheet. 
+ ✅ This I²C device has two possible addresses, find them in the data sheet. 
   
 <Details>
     <Summary>Example Solution</Summary>
@@ -62,7 +62,7 @@ where
 </Details>
 
 
-🔎 This I2C device has two possible addresses. We tell the device which one we want it to use by applying either 0V or 3.3V to the AP_AD0 pin on the device. If we apply 0V, it listens to address 0x68. If we apply 3.3V it listens to address 0x69. You can therefore think of pin AD_AD0 as being a one-bit input which sets the least-significant bit of the device address.
+🔎 This I²C device has two possible addresses. We tell the device which one we want it to use by applying either 0V or 3.3V to the AP_AD0 pin on the device. If we apply 0V, it listens to address 0x68. If we apply 3.3V it listens to address 0x69. You can therefore think of pin AD_AD0 as being a one-bit input which sets the least-significant bit of the device address.
 More information is available in the [datasheet, section 9.3](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf)
 
 
