--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -22,7 +22,8 @@ pub struct ICM42670P<I2C> {
 
 // ...
 ```
-We also implement an instantiating method. Methods can also be public or private. This method needs to be accessible from outside, so it's labelled `pub`. Note that written this way, the sensor instance takes ownership of the I²C bus.
+
+We add an `impl` block that will contain all the methods that can be used on the sensor instance. It also defines the Error Handling. In this block we also implement an instantiating method. Methods can also be public or private. This method needs to be accessible from outside, so it's labelled `pub`. Note that written this way, the sensor instance takes ownership of the I²C bus.
 
 ```rust
 impl<I2C, E>ICM42670P<I2C>
@@ -38,7 +39,6 @@ where
     }
 // ...
 ```
-- explain: `I2C: i2c::WriteRead<Error = E> + i2c::Write<Error = E>` ?
 #### Device address
 
 - the device's addresses are available in the code:
