--- a/book/src/04_3_3_i2c.md
+++ b/book/src/04_3_3_i2c.md
@@ -46,13 +46,13 @@ where
 // ...
 ```
 </Details>
-- explain: `I2C: i2c::WriteRead<Error = E> + i2c::Write<Error = E>` ?
+
 
 
 
 #### Device address
 
- ✅ This I²C device has two possible addresses, find them in the data sheet. 
+ ✅ This I²C device has two possible addresses, find them in the [data sheet, section 9.3](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf). 
   
 <Details>
     <Summary>Example Solution</Summary>
@@ -62,8 +62,7 @@ where
 </Details>
 
 
-🔎 This I²C device has two possible addresses. We tell the device which one we want it to use by applying either 0V or 3.3V to the AP_AD0 pin on the device. If we apply 0V, it listens to address 0x68. If we apply 3.3V it listens to address 0x69. You can therefore think of pin AD_AD0 as being a one-bit input which sets the least-significant bit of the device address.
-More information is available in the [datasheet, section 9.3](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf)
+🔎  We tell the device which one we want it to use by applying either 0V or 3.3V to the AP_AD0 pin on the device. If we apply 0V, it listens to address 0x68. If we apply 3.3V it listens to address 0x69. You can therefore think of pin AD_AD0 as being a one-bit input which sets the least-significant bit of the device address.
 
 
  ✅ Create an enum that represents both address variants. The values of the variants need to be in binary representation. 
