changed return type to self in the book, less changes to remember in case of reformating

--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -32,10 +32,7 @@ where
 {
     /// Create a new instance of the ICM42670P.
     pub fn new(i2c: I2C, address: DeviceAddr) -> Result<Self, E> {
-
-        let icm42670p = ICM42670P { i2c, address };
-
-        Ok(icm42670p)
+        Ok(Self{ i2c, address })
     }
 // ...
 ```
