update paths to solutions

--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -20,13 +20,13 @@ Create an instance of the of the Humidity sensor SHTC3 and read and print the va
 
 
 
-`i2c-sensor-reading/solution/src/main.rs` contains a working solution of Part 1.
+`i2c-sensor-reading/examples/part_1.rs` contains a working solution of Part 1.
 
-`i2c-sensor-reading/exercise/src/main.rs` contains skeleton code, that already contains necessary imports for this part. 
+`i2c-sensor-reading/src/main.rs` contains skeleton code, that already contains necessary imports for this part. 
 
 #### Steps:
 
-✅ Go to the `i2c-sensor-reading/exercise/` folder and open the relevant documentation with the following command:
+✅ Go to the `i2c-sensor-reading/` folder and open the relevant documentation with the following command:
   
 ```
 $ cargo doc --open
@@ -75,9 +75,9 @@ HUM: [local humidity] %
 Using a bus manager, implement the second sensor. Read out its values and print the values from both sensors. 
 
 
-Continue with your code from Part 1. Alternatively you can start with the provided partial solution of Part 1: `i2c-sensor-reading/solution/src/main.rs`.
+Continue with your code from Part 1. Alternatively you can start with the provided partial solution of Part 1: `i2c-sensor-reading/examples/part_1.rs`.
 
-`i2c-sensor-reading/solution/src/main_2.rs` contains a working solution of Part 2. You can consult it if you need help. 
+`i2c-sensor-reading/examples/part_2.rs` contains a working solution of Part 1.` contains a working solution of Part 2. You can consult it if you need help. 
 
 
 #### Steps
