--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -2,7 +2,7 @@
 
 We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: reading the device ID of the sensor. This version is labelled easy, because we explain the code fragments, and you only have to copy and paste the fragments into into the right place. Use this version if you have very little previous experience with Rust, if these workshops are your first in the embedded domain, or if you found the hard version too hard. 
 
-`i2c-driver/exercise/src/icm42670p.rs` is a gap text of a very basic I²C IMU sensor driver. The task is to complete the file, so that running `main.rs` will log the device ID of the driver. The this gap text driver is based on the version of the same name that lives in common, but provides a little bit more functionality.
+`i2c-driver/src/icm42670p.rs` is a gap text of a very basic I²C IMU sensor driver. The task is to complete the file, so that running `main.rs` will log the device ID of the driver. The this gap text driver is based on the version of the same name that lives in common, but provides a little bit more functionality.
 
 ## Driver API
 
@@ -101,7 +101,7 @@ where
 
 #### General info about how registers work
 
-- Registers are small amounts of storage, immediately accessible by the processor. The registors on the sensor are 8 bits.
+- Registers are small amounts of storage, immediately accessible by the processor. The registers on the sensor are 8 bits.
 - They can be accessed by their address
 - You can find [registers maps](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) in the section 14.
 - Returning a value with MSB and LSB is done by shifting MSB values, and OR LSB values.
