Changes to the book content: - branding on front page with official logo - warning to go to the espressif matrix for technical questions, open to everyone - added picture of the board - added block diagram - added I2C information

--- a/book/src/04_3_0_i2c.md
+++ b/book/src/04_3_0_i2c.md
@@ -33,5 +33,15 @@ To read three bytes from an EEPROM device, the sequence will be something like:
 | 15.  |                          | Data Byte from EEPROM Address + 2 |
 | 16.  | NAK (i.e. end-of-read)   |                                   |
 | 17.  | STOP                     |                                   |
+### I²C signal image
 
-TODO I2C signal image
+
+<p style="text-align:center;"><img src="./assets/I2C_data_transfer.svg" width="100%"></p>
+
+A sequence diagram of data transfer on the I²C bus:
+- S - Start condition
+- P - Stop condition
+- B<sub>1</sub> to B<sub>N</sub> - transferring of one bit
+- SDA changes are allowed when SCL is low (blue), otherwise there will be a start or stop condition generated. 
+
+[Source & more details: Wikipedia](https://en.wikipedia.org/wiki/I%C2%B2C).
