--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -20,7 +20,11 @@ Create an instance of the of the Humidity sensor SHTC3 and read and print the va
 
 
 
-`i2c-sensor-reading/examples/part_1.rs` contains a working solution of Part 1.
+`i2c-sensor-reading/examples/part_1.rs` contains a working solution of Part 1. To run the solution add `--example part_1` to your run command:
+
+```console
+$ cargo espflash --release --example part_1 --monitor /dev/SERIAL_DEVICE
+```
 
 `i2c-sensor-reading/src/main.rs` contains skeleton code, that already contains necessary imports for this part. 
 
@@ -39,7 +43,7 @@ $ cargo doc --open
 | SDA        | GPIO10      |
 | SCL        | GPIO8       |
 
-✅ Create an Instance of the I²C peripheral with the help of the documentation. 
+✅ Create an Instance of the I²C peripheral with the help of the documentation you generated. This requires a baud rate: You can use 400kHz, a default value.
 
 ✅ Use the `shtcx` driver crate, make an instance of the SHTC3 sensor passing the I²C instance into them. Check the documentation for guidance. 
 
@@ -75,9 +79,9 @@ HUM: [local humidity] %
 Using a bus manager, implement the second sensor. Read out its values and print the values from both sensors. 
 
 
-Continue with your code from Part 1. Alternatively you can start with the provided partial solution of Part 1: `i2c-sensor-reading/examples/part_1.rs`.
+Continue with your own solution from part one. Alternatively you can start with the provided partial solution of Part 1: `i2c-sensor-reading/examples/part_1.rs`.
 
-`i2c-sensor-reading/examples/part_2.rs` contains a working solution of Part 1.` contains a working solution of Part 2. You can consult it if you need help. 
+`i2c-sensor-reading/examples/part_2.rs` contains a working solution of Part 2. You can consult it if you need help. 
 
 
 #### Steps
