update book and main

--- a/book/src/03_5_2_mqtt.md
+++ b/book/src/03_5_2_mqtt.md
@@ -19,7 +19,7 @@ The structure of the exercises is as below. In this part, we will focus on the T
 
 ✅ Create an `EspMqttClient` with a default configuration and an empty handler closure.
 
-✅ Send an empty message under the `hello` topic to the broker. Use the `hello_topic(uuid)` utility function to generate a properly scoped topic.
+✅ Send an empty message under the `hello_topic` to the broker. Use the `hello_topic(uuid)` utility function to generate a properly scoped topic.
 
 ✅ Verify a successful publish by having a client connected that logs these messages. The `host_client` implements this behavior. You should run it in another terminal.
 
@@ -34,12 +34,14 @@ It is constructed using
 - a handler closure similar to the http server exercise
 
 ```rust
-const url = format!("mqtt://{}:{}@{}", username, password, host);
-let cfg = MqttClientConfiguration::default();
-let mut client = EspMqttClient::new_with_callback(url, &cfg, move |message_event| { 
-    // ... your handler code here - leave this empty for now
-    // we'll add functionality later in this chapter
-};
+
+let mut client = EspMqttClient::new(broker_url, 
+    &mqtt_config, 
+    move |message_event| {
+        // ... your handler code here - leave this empty for now
+        // we'll add functionality later in this chapter
+    })?;
+
 ```
 
 ## Support tools & crates
