--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -33,16 +33,19 @@ client.subscribe(subscribe_topic, QoS::AtLeastOnce)
 ## Handling incoming messages
 
 
-The `message_event` parameter in the handler closure is of type `Option<Result<Event<EspMqttMessage>>>`.
+The `message_event` parameter in the handler closure is of type `Result<Event<EspMqttMessage>`.
 Since we're only interested in processing successfully received messages, we can make use of deep pattern matching into the closure:
 
 ```rust
 let mut client =
-        EspMqttClient::new_with_callback(broker_url, &mqtt_config, move |message_event| {
-            if let Some(Ok(Received(message))) = message_event {
-                /* process_message() function here */
-            }
-        })?;
+        EspMqttClient::new(
+            broker_url,
+            &mqtt_config,
+            move |message_event| match message_event {
+                Ok(Received(msg)) => process_message(msg, &mut led),
+                _ => warn!("Received from MQTT: {:?}", message_event),
+            },
+        )?;
 ```
 
 In the processing function, you will handle `Complete` messages. Use Rust Analyzer to generate the missing match arms or match any other type of response by logging an `info!()`.
@@ -50,7 +53,7 @@ In the processing function, you will handle `Complete` messages. Use Rust Analyz
     match message.details() {
         // all messages in this exercise will be of type `Complete`
         // the other variants of the `Details` enum are for larger message payloads
-        Complete(token) => {
+        Complete => {
             
             // Cow<&[u8]> can be coerced into a slice &[u8] or a Vec<u8>
             // You can coerce it into a slice to be sent to try_from()
@@ -73,7 +76,8 @@ In the processing function, you will handle `Complete` messages. Use Rust Analyz
 ## Extra tasks
 
 ### Implement MQTT with hierarchical topics
-
+- work on this if you have finished everything else. We don't provide a full solution for this, as this is to test how far you get on your own. 
+  
 - Implement the same procedure but by using MQTT hierarchy. Subscribe subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard.
 
 - in the host client, you will need to change to replace `color` with `command`. For example, unquote this line `//let command = Command::BoardLed(color);` and quote the corresponding `let color = ColorData::BoardLed(color);`
