--- a/book/src/03_5_2_mqtt.md
+++ b/book/src/03_5_2_mqtt.md
@@ -46,13 +46,13 @@ let mut client = EspMqttClient::new(broker_url,
 
 ## Support tools & crates
 
-To log the sensor values sent by the board, a helper client is provided under `intro/mqtt/example_client`. It subscribes to the temperature topic.
+To log the sensor values sent by the board, a helper client is provided under `intro/mqtt/host_client`. It subscribes to the temperature topic.
 
 The `mqtt_messages` crate (located in `common/lib`) supports handling messages, subscriptions and topics:
 
 ### Functions to generate topic strings
 -  `color_topic(uuid)` - creates a topic to send colors that will be published to the board.
-- `cmd_topic_fragment(uuid)` - creates the leading part of a "command" topic (the `a-uuid/command/` part in `a-uuid/command/board_led`)
+<!-- - `cmd_topic_fragment(uuid)` - creates the leading part of a "command" topic (the `a-uuid/command/` part in `a-uuid/command/board_led`) -->
 - `hello_topic(uuid)` - test topic for initially verifying a successful connection
 - `temperature_data_topic(uuid)` - creates a whole "temperature" topic string 
 
