Adds info on peripheral registers, removes info for CPU registers.

--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -102,16 +102,11 @@ where
     * starting measurements
     * reading measurements
 
-### General info about how registers work
+### 🔎 General info about peripheral registers
 
-- Registers are small amounts of storage, immediately accessible by the processor. The registers on the sensor are 8 bits.
-- They can be accessed by their address
-- You can find [registers maps](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) in the section 14.
-- Returning a value with MSB and LSB (most significant byte and least significant byte) is done by shifting MSB values, and OR LSB values.
+Registers can have different meanings; in essence they are **a location that can store a value**.
 
-```rust
-let GYRO_DATA_X: i16 = ((GYRO_DATA_X1 as i16) << 8) | GYRO_DATA_X0 as i16;
-```
+In this specific context we are using an external device (since it is a sensor, even if it is on the same PCB). It is addressable by I2C and we are reading and writing to its register addresses. The addresses each identify a unique location that contains some information. In this case, we want the address for the location that contains the current temperature, as read by the sensor.
 
-If you need hints and inspiration on what to implement, you can check the icm42670p in the common/lib folder.
+You can find the register map of the ICM-42670 in [section 14](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) should you want to try to get other interesting data from this sensor.
 
