better hints for hierarchical extra

--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -77,11 +77,10 @@ In the processing function, you will handle `Complete` messages. Use Rust Analyz
 
 ### Implement MQTT with hierarchical topics
 - work on this if you have finished everything else. We don't provide a full solution for this, as this is to test how far you get on your own. 
-  
-- Implement the same procedure but by using MQTT hierarchy. Subscribe subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard.
 
-- in the host client, you will need to change to replace `color` with `command`. For example, unquote this line `//let command = Command::BoardLed(color);` and quote the corresponding `let color = ColorData::BoardLed(color);`
-`
+Check `common/lib/mqtt-messages`:
+
+- Implement the same procedure but by using MQTT hierarchy. Subscribe subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard.
 
 - Use `enum Command` instead of `enum ColorData`. `enum Command` represents all possible commands (here: just `BoardLed`).
 
@@ -95,11 +94,20 @@ let raw = RawCommandData {
 };
 
 ```
+
+Check the `host-client`: 
+
+- you will need to replace `color` with `command`. For example like this 
+
+```
+let command = Command::BoardLed(color)
+```
+
 - in the `process_message()` function you will need to parse the topic.
 
 ```rust
 match message.details() {
-    Details::Complete(token) => {
+    Complete => {
         // all messages in this exercise will be of type `Complete`
         // the other variants of the `Details` enum
         // are for larger message payloads
