--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -1,9 +1,9 @@
 ## I²C Sensor Reading Exercise 
 
-In this exercise you will learn how to read out sensors on the I²C bus. 
- 
- 
-The board has two sensors that can be read via the I²C bus: `
+In this exercise you will learn how to read out sensors on the I²C bus.
+
+
+The board has two sensors that can be read via the I²C bus:
 
 
 | Peripheral                | Part number  | Reference                                                                   | Crate | Address |
@@ -12,7 +12,7 @@ The board has two sensors that can be read via the I²C bus: `
 | Temperature and Humidity  | SHTC3        | [Datasheet](https://www.sensirion.com/en/environmental-sensors/humidity-sensors/digital-humidity-sensor-shtc3-our-new-standard-for-consumer-electronics/)            | [Link](https://crates.io/crates/shtcx)       | 0x70 |
 
 
- The task is to use an existing driver from crates.io to read out the temperature and humidity sensor over I²C. After that, a second sensor will be read out over the same I²C bus using `shared-bus`. The driver for the second sensor is available locally in `common/`.
+The task is to use an existing driver from crates.io to read out the temperature and humidity sensor over I²C. After that, a second sensor will be read out over the same I²C bus using `shared-bus`. The driver for the second sensor is available locally in `common/`.
 
 ### Part 1: Reading Temperature & Humidity
 
